RESOLVED FIXED203802
RealtimeOutgoingAudioSource/RealtimeOutgoingVideoSource should unobserve before destruction time
https://bugs.webkit.org/show_bug.cgi?id=203802
Summary RealtimeOutgoingAudioSource/RealtimeOutgoingVideoSource should unobserve befo...
youenn fablet
Reported 2019-11-04 01:18:47 PST
RealtimeOutgoingAudioSource/RealtimeOutgoingVideoSource should unobserve before destruction time. They might ref themselves in observer callbacks
Attachments
Patch (5.58 KB, patch)
2019-11-04 01:43 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-04 01:19:30 PST
youenn fablet
Comment 2 2019-11-04 01:43:04 PST
WebKit Commit Bot
Comment 3 2019-11-04 07:47:06 PST
Comment on attachment 382723 [details] Patch Clearing flags on attachment: 382723 Committed r251989: <https://trac.webkit.org/changeset/251989>
WebKit Commit Bot
Comment 4 2019-11-04 07:47:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.