RealtimeOutgoingAudioSource/RealtimeOutgoingVideoSource should unobserve before destruction time https://bugs.webkit.org/show_bug.cgi?id=203802

Reviewed by Eric Carlson.

These classes are used by LibWebRTCRtpSenderBackend.
When the backend is destroyed, notify the sources to unobserve before unrefing them.
Add debug assertions to ensure this is done correctly.
Covered by existing tests.

* Modules/mediastream/libwebrtc/LibWebRTCRtpSenderBackend.cpp:
(WebCore::LibWebRTCRtpSenderBackend::~LibWebRTCRtpSenderBackend):
* Modules/mediastream/libwebrtc/LibWebRTCRtpSenderBackend.h:
Fixed Variant Move issue.
* platform/mediastream/MediaStreamTrackPrivate.h:
(WebCore::MediaStreamTrackPrivate::hasObserver const):
* platform/mediastream/RealtimeOutgoingAudioSource.cpp:
(WebCore::RealtimeOutgoingAudioSource::~RealtimeOutgoingAudioSource):
* platform/mediastream/RealtimeOutgoingVideoSource.cpp:
(WebCore::RealtimeOutgoingVideoSource::~RealtimeOutgoingVideoSource):


Canonical link: https://commits.webkit.org/217155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251989 268f45cc-cd09-0410-ab3c-d52691b4dbfc